--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vencislav Tasheff",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "1.15.2",
     "express": "4.14.0",
     "express-handlebars": "3.0.0",
     "mongoose": "4.7.6"
