--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "1.15.2",
     "express": "4.14.0",
     "express-handlebars": "3.0.0",
-    "mongoose": "4.7.6"
+    "mongoose": "4.7.6",
+    "morgan": "1.7.0"
   }
 }
