--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Superheroes Express.js app (Telerik Academy Node.js course)",
   "main": "app.js",
+  "scripts": {
+    "dev": "./node_modules/.bin/nodemon app.js",
+    "postinstall": "./node_modules/bin/bower install"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wencakisa/superheroes-app.git"
@@ -11,9 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.15.2",
+    "bower": "1.8.0",
     "express": "4.14.0",
     "express-handlebars": "3.0.0",
     "mongoose": "4.7.6",
     "morgan": "1.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
